fix: EuddAnswerRequest 역직렬화 오류 해결을 위한 기본 생성자 추가
- Jackson이 DTO 역직렬화 시 기본 생성자를 요구하여 @NoArgsConstructor 추가
- @AllArgsConstructor와 @Builder 조합으로 객체 생성 유연성도 확보